# forgemux

./: .forgemux-hub.toml  CHANGELOG.md  Cargo.toml  README.md  TEST_PLAN.md  default.nix  flake.nix  package.nix
.cargo/: mutants.toml
.githooks/: pre-commit  pre-push
crates/fmux/: Cargo.toml
crates/fmux/src/: main.rs
crates/forged/: Cargo.toml
crates/forged/src/: agent.rs  checks.rs  lib.rs  main.rs  server.rs  stream.rs
crates/forgehub/: Cargo.toml
crates/forgehub/migrations/: 001_init.sql  002_handoffs.sql
crates/forgehub/src/: db.rs  github.rs  lib.rs  main.rs  risk.rs
crates/forgehub/tests/: bdd.rs
crates/forgehub/tests/features/: decision_lifecycle.feature  role_github_handoffs.feature  session_creation.feature  session_input.feature  ui_model_selection.feature  workspace_integration.feature  workspace_mapping.feature  workspace_sessions.feature  workspaces.feature  worktree_start.feature
crates/forgemux-core/: Cargo.toml
crates/forgemux-core/src/: decision.rs  handoff.rs  lib.rs  meta.rs  replay.rs  repo.rs  scrub.rs  session.rs  state.rs  workspace.rs
dashboard/: app.js  index-legacy.html  index.html  state.js  theme.js
dashboard/components/: attach.js  decision_utils.js  decision_utils.test.mjs  decisions.js  fleet.js  nav.js  replay.js  shared.js
dashboard/lib/: ansi.js  stream.js
dashboard/services/: api.js  ws.js
dashboard/tests/: color_utils.test.mjs  decision_utils.test.mjs  stream_utils.test.mjs
docs/: EPIC_ROLE_GITHUB_INTEGRATION.md
docs/research/: comp-report.md  competitors-analysis1.md  competitors-analysis2.md  competitors-analysis3.md  happy-codex.md  new_ideas.md  roadmap.md
docs/research/competitors/: agent-deck.md  agent-deck2.md  beehive.md  beehive2.md  claudedash.md  claudedash2.md  happy.md  happy2.md  mission-control.md  mission-control2.md  openfang.md  stereos.md  superset.md  superset2.md
docs/research/multi-user/: initial.md
docs/research/ux/: 20260303-ux-review.md  forgemux-hub-stories.md  forgemux-hub.jsx  implementation_plan.md  initial.md  tech_design.md  tech_design2.md  tech_design3.md  tech_design_review.md  tech_design_spec.md
docs/specs/: brief.md  design.md  roadmap.md  scenarios.md
