[package]
name = "fmux"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.forgemux-core]
path = "../forgemux-core"

[dependencies.forged]
path = "../forged"

[dependencies.forgehub]
path = "../forgehub"
