[package]
name = "fmux"
version = "0.1.14"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
qrcodegen = "1.8"
urlencoding = "2.1"

[dependencies.forgemux-core]
path = "../forgemux-core"

[dependencies.forged]
path = "../forged"

[dependencies.forgehub]
path = "../forgehub"

[dependencies.reqwest]
version = "0.12"
features = ["json", "blocking"]

[dependencies.serde_json]
workspace = true

[dev-dependencies]
tempfile.workspace = true
