[package]
name = "forged"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"

[dev-dependencies]
tempfile.workspace = true

[dependencies.forgemux-core]
path = "../forgemux-core"
