[package]
name = "forged"
version = "0.1.21"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
reqwest = { version = "0.12", features = ["json", "blocking"] }
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
walkdir = "2.5"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tempfile.workspace = true

[dependencies.forgemux-core]
path = "../forgemux-core"
