[package]
name = "forgehub"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[dependencies.forgemux-core]
path = "../forgemux-core"

[dev-dependencies]
tempfile.workspace = true
tower = "0.5"
